# TextEditorC

./: .gitignore  CMakeLists.txt  main  main.c  readme.md
